# getting-started

bob/: README.md  bobgen.yaml  compose.yaml  ddl.sql  go.mod  go.sum
bob/example/start/: main.go
bob/models/: bob_main.bob.go  users.bob.go
bob/models/factory/: bobfactory_context.bob.go  bobfactory_random.bob.go  bobfactory_random_test.bob.go  users.bob.go
go/rabbitmq/: README.md
go/rabbitmq/receive/: main.go
go/rabbitmq/send/: main.go
infrastructure/docker/gocker/: README.md  memo.md  memo2.md
infrastructure/k8s/argo/: README.md
infrastructure/k8s/argo/cron_workflow/: example.yaml
infrastructure/k8s/argocd/: README.md
infrastructure/k8s/kong/: README.md
infrastructure/k8s/kubebuilder/: README.md
infrastructure/k8s/kubebuilder/example/: PROJECT  go.mod  main.go
infrastructure/k8s/postgres-operator/: README.md
infrastructure/othres/oauth2_proxy/: .env.sample  README.md  docker-compose.yml  nginx.conf
infrastructure/othres/sops/: README.md
js/nuxt/: README.md  package.json
js/nuxt/pages/: index.vue
js/puppeteer/: README.md  example.js  get-dimensions.js  hn.js  package-lock.json
meilisearch-go/: README.md  go.mod
meilisearch-go/asset/: add-movies.json
meilisearch-go/scripts/add-document/: main.go
meilisearch-go/scripts/search/: main.go
python/fastapi-sample/: .gitignore  README.md  pyproject.toml
python/tox-sample/: README.md  pyproject.toml  tox.ini
python/tox-sample/tests/: test_sample.py
remix/: package-lock.json
rust/: README.md
rust/hello-rocket/: Cargo.toml  README.md
templates/: README.md  new.sh
(+6 files in other folders)
