[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["kaito2 <kaito.iwatsuki@nislab.doshisha.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
taskipy = "^1.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.taskipy.tasks]
server = "uvicorn main:app --reload"
test = "python -m unittest tests/test_*.py"
